components/authz-custom/gateway-authz-custom.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: authz-custom
  namespace: istio-ingress
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
      - authz-custom-istio-ingress.apps-crc.testing
    tls:
      mode: SIMPLE
      credentialName: authz-custom
...
