components/authz-custom/route-authz-custom.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: authz-custom
  namespace: istio-ingress
spec:
  host: authz-custom-istio-ingress.apps-crc.testing
  port:
    targetPort: https
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: istio-ingressgateway
    weight: 100
  wildcardPolicy: None
...
