components/authz-custom/virtualservice-oauth-bookinfo.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: authz-custom
spec:
  gateways:
  - istio-ingress/authz-custom
  hosts:
  - authz-custom-istio-ingress.apps-crc.testing
  http:
  - route:
    - destination:
        host: oauth2-proxy.authz-custom.svc.cluster.local
        port:
          number: 80
...
